--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -8,26 +8,46 @@
   align-items: center;
   flex-shrink: 1;
   padding-top: var(--dl-space-space-twounits);
-  padding-bottom: var(--dl-space-space-fiveunits);
+  padding-bottom: var(--dl-space-space-sixunits);
 }
 .navbar-branding-logo {
-  width: var(--dl-size-size-small);
+  width: 1.7rem;
+  height: 1.7rem;
   box-sizing: content-box;
 }
 .navbar-text {
   color: rgb(0, 0, 0);
   width: 0px;
-  font-size: 35px;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-family: "Inter Tight";
+  font-weight: 600;
   margin-left: 3px;
 }
 
 @media(max-width: 1200px) {
+  .navbar-navbar {
+    padding-bottom: var(--dl-space-space-sixunits);
+  }
+  .navbar-text {
+    color: rgb(0, 0, 0);
+  }
   .navbar-root-class-name {
     width: 95%;
     max-width: 100%;
   }
 }
 @media(max-width: 991px) {
+  .navbar-navbar {
+    padding-bottom: var(--dl-space-space-sixunits);
+  }
+  .navbar-text {
+    color: rgb(0, 0, 0);
+    font-size: 1.5rem;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
+  }
   .navbar-root-class-name {
     width: 95%;
     max-width: 100%;
@@ -35,13 +55,17 @@
 }
 @media(max-width: 767px) {
   .navbar-navbar {
-    padding-bottom: var(--dl-space-space-fourunits);
+    padding-bottom: var(--dl-space-space-sixunits);
   }
   .navbar-branding-logo {
-    width: 80px;
+    width: 1.7rem;
   }
   .navbar-text {
     color: rgb(0, 0, 0);
+    font-size: 1.5rem;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
   }
   .navbar-root-class-name {
     width: 90%;
@@ -52,17 +76,20 @@
   .navbar-navbar {
     max-width: 100%;
     flex-direction: row;
-    padding-bottom: var(--dl-space-space-fourunits);
+    padding-bottom: var(--dl-space-space-sixunits);
   }
   .navbar-branding-logo {
-    width: var(--dl-size-size-small);
-    height: var(--dl-size-size-small);
+    width: 30px;
+    height: 30px;
     align-self: center;
   }
   .navbar-text {
     color: rgb(0, 0, 0);
-    font-size: 2rem;
+    font-size: 1.5rem;
     align-self: center;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
     margin-left: 3px;
   }
   .navbar-root-class-name {
