--- a/src/views/home.css
+++ b/src/views/home.css
@@ -6,7 +6,7 @@
   overflow-x: hidden;
   align-items: center;
   flex-direction: column;
-  background-color: #f8f7f4;
+  background-color: #fafafc;
 }
 .home-section {
   width: 100%;
@@ -56,20 +56,23 @@
 .home-heading {
   color: rgb(0, 0, 0);
   width: 100%;
-  font-size: 64px;
+  font-size: 4rem;
   max-width: 100%;
   align-self: center;
   text-align: center;
-  font-family: "Georgia";
-  font-weight: 400;
+  font-family: "Inter Tight";
+  font-weight: 600;
 }
 .home-caption {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-size: 25px;
   align-self: center;
   text-align: center;
   font-family: "MonaSans-Regular";
   line-height: 40px;
+}
+.home-text05 {
+  font-family: "Inter";
 }
 .home-section1 {
   gap: var(--dl-space-space-fiveunits);
@@ -108,15 +111,7 @@
   width: 100%;
   align-self: center;
   text-align: center;
-  font-family: "MonaSans-MediumBold";
-}
-.home-text08 {
-  font-style: normal;
-  font-weight: 400;
-}
-.home-text10 {
-  font-style: normal;
-  font-weight: 400;
+  font-family: "Inter";
 }
 .home-cards {
   gap: var(--dl-space-space-threeunits);
@@ -135,11 +130,12 @@
   display: flex;
   padding: var(--dl-space-space-threeunits);
   position: relative;
+  box-shadow: 5px 5px 10px 0px #d4d4d4;
   align-items: flex-start;
   border-radius: 10%;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #ebd2c3;
+  background-color: #ffffff;
 }
 .home-content1 {
   gap: var(--dl-space-space-halfunit);
@@ -149,17 +145,20 @@
   justify-content: flex-start;
 }
 .home-header2 {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-size: 24px;
   font-style: normal;
-  font-family: "MonaSans-MediumBold";
+  font-family: "Inter Tight";
   font-weight: 600;
   line-height: 36px;
 }
 .home-description {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-family: "MonaSans-Regular";
   line-height: 28px;
+}
+.home-text07 {
+  font-family: "Inter";
 }
 .home-card1 {
   gap: var(--dl-space-space-oneandhalfunits);
@@ -168,11 +167,12 @@
   display: flex;
   padding: var(--dl-space-space-threeunits);
   position: relative;
+  box-shadow: 5px 5px 10px 0px #d4d4d4;
   align-items: flex-start;
   border-radius: 10%;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #ebd2c3;
+  background-color: #ffffff;
 }
 .home-content2 {
   gap: var(--dl-space-space-halfunit);
@@ -182,7 +182,7 @@
   justify-content: flex-start;
 }
 .home-header3 {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-size: 24px;
   font-style: normal;
   font-family: "MonaSans-MediumBold";
@@ -190,9 +190,12 @@
   line-height: 36px;
 }
 .home-description1 {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-family: "MonaSans-Regular";
   line-height: 28px;
+}
+.home-text12 {
+  font-family: "Inter";
 }
 .home-card2 {
   gap: var(--dl-space-space-oneandhalfunits);
@@ -201,11 +204,12 @@
   display: flex;
   padding: var(--dl-space-space-threeunits);
   position: relative;
+  box-shadow: 5px 5px 10px 0px #d4d4d4;
   align-items: flex-start;
   border-radius: 10%;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #ebd2c3;
+  background-color: #ffffff;
 }
 .home-content3 {
   gap: var(--dl-space-space-halfunit);
@@ -215,17 +219,20 @@
   justify-content: flex-start;
 }
 .home-header4 {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-size: 24px;
   font-style: normal;
-  font-family: "MonaSans-MediumBold";
+  font-family: "Inter Tight";
   font-weight: 600;
   line-height: 36px;
 }
 .home-description2 {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-family: "MonaSans-Regular";
   line-height: 28px;
+}
+.home-text15 {
+  font-family: "Inter";
 }
 .home-footer {
   gap: var(--dl-space-space-fiveunits);
@@ -273,13 +280,13 @@
   justify-content: flex-start;
 }
 .home-heading2 {
-  color: #000000;
+  color: rgb(0, 0, 0);
   font-size: 20px;
   max-width: 275px;
   align-self: center;
   font-style: normal;
   text-align: left;
-  font-family: "MonaSans-MediumBold";
+  font-family: "Inter Tight";
   font-weight: 500;
   line-height: 30px;
 }
@@ -300,6 +307,7 @@
   flex: 1;
   color: #000000;
   height: 24px;
+  font-family: "Inter";
   line-height: 24px;
   padding-left: var(--dl-space-space-oneandhalfunits);
   outline-style: none;
@@ -313,7 +321,7 @@
   padding-bottom: var(--dl-space-space-unit);
   background-color: var(--dl-color-gray-black);
 }
-.home-text26 {
+.home-text17 {
   color: rgb(12, 16, 12);
   display: none;
   font-size: 16px;
@@ -322,12 +330,12 @@
   font-weight: 500;
   line-height: 24px;
 }
-.home-text27 {
-  color: #ffffff;
+.home-text18 {
+  color: rgb(255, 255, 255);
   display: flex;
   font-size: 16px;
   font-style: normal;
-  font-family: "MonaSans-MediumBold";
+  font-family: "Inter";
   font-weight: 500;
   line-height: 24px;
 }
@@ -335,14 +343,90 @@
   display: contents;
 }
 @media(max-width: 1200px) {
+  .home-container {
+    background-color: #fafafc;
+  }
   .home-hero {
     max-width: 100%;
   }
   .home-heading {
+    color: rgb(0, 0, 0);
     width: 100%;
+    font-size: 4rem;
+    font-family: Inter Tight;
+    font-weight: 600;
   }
   .home-caption {
+    color: rgb(0, 0, 0);
     width: 100%;
+    font-size: 25px;
+    font-family: MonaSans-Regular;
+    line-height: 40px;
+  }
+  .home-text04 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  .home-text05 {
+    font-size: 1.5rem;
+    font-family: Inter;
+    line-height: 2rem;
+  }
+  .home-heading1 {
+    color: rgb(0, 0, 0);
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
+  }
+  .home-cards {
+    height: auto;
+    max-width: 100%;
+  }
+  .home-card {
+    height: 374px;
+    background-color: #ffffff;
+  }
+  .home-header2 {
+    color: rgb(0, 0, 0);
+  }
+  .home-description {
+    color: rgb(0, 0, 0);
+    font-family: MonaSans-Regular;
+    line-height: 28px;
+  }
+  .home-text07 {
+    font-family: Inter;
+  }
+  .home-card1 {
+    height: 374px;
+    background-color: #ffffff;
+  }
+  .home-header3 {
+    color: rgb(0, 0, 0);
+  }
+  .home-text09 {
+    font-family: Inter Tight;
+  }
+  .home-description1 {
+    color: rgb(0, 0, 0);
+    font-family: MonaSans-Regular;
+    line-height: 28px;
+  }
+  .home-text12 {
+    font-family: Inter;
+  }
+  .home-card2 {
+    height: 374px;
+    background-color: #ffffff;
+  }
+  .home-header4 {
+    color: rgb(0, 0, 0);
+  }
+  .home-description2 {
+    color: rgb(0, 0, 0);
+  }
+  .home-text15 {
+    font-family: Inter Tight;
   }
 }
 @media(max-width: 991px) {
@@ -372,37 +456,35 @@
   }
   .home-heading {
     color: rgb(0, 0, 0);
-    font-size: 2rem;
+    font-size: 5rem;
     text-align: center;
-    font-family: Georgia;
-    font-weight: 400;
+    font-family: Inter Tight;
+    font-weight: 600;
   }
   .home-text {
-    font-size: 4rem;
+    font-size: 3rem;
     text-align: left;
   }
   .home-text01 {
-    font-size: 4rem;
-    text-align: left;
+    font-size: 3rem;
   }
   .home-text02 {
-    font-size: 4rem;
-  }
-  .home-text03 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   .home-caption {
     color: rgb(0, 0, 0);
-    font-size: 25px;
+    font-size: 1rem;
     text-align: center;
     font-family: MonaSans-Regular;
-    line-height: 40px;
+    line-height: 1.5rem;
+  }
+  .home-text04 {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
   .home-text05 {
-    font-size: 2rem;
-  }
-  .home-text06 {
-    font-size: 2rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
   .home-section1 {
     gap: var(--dl-space-space-threeunits);
@@ -418,15 +500,9 @@
   .home-heading1 {
     color: rgb(0, 0, 0);
     font-size: 2rem;
-    font-family: MonaSans-MediumBold;
-  }
-  .home-text08 {
     font-style: normal;
-    font-weight: 400;
-  }
-  .home-text10 {
-    font-style: normal;
-    font-weight: 400;
+    font-family: Inter Tight;
+    font-weight: 600;
   }
   .home-cards {
     gap: var(--dl-space-space-oneandhalfunits);
@@ -436,20 +512,58 @@
   }
   .home-card {
     width: 100%;
+    height: 100%;
     border-radius: 20px;
+  }
+  .home-header2 {
+    color: rgb(0, 0, 0);
+    font-size: 24px;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
+    line-height: 36px;
   }
   .home-description {
     color: rgb(0, 0, 0);
-    font-family: MonaSans-Regular;
-    line-height: 28px;
+  }
+  .home-text07 {
+    font-size: 1.2rem;
+    font-family: Inter;
   }
   .home-card1 {
     width: 100%;
+    height: 100%;
     border-radius: 20px;
+  }
+  .home-header3 {
+    color: rgb(0, 0, 0);
+  }
+  .home-text09 {
+    font-size: 1.5rem;
+    font-family: Inter Tight;
+  }
+  .home-description1 {
+    color: rgb(0, 0, 0);
+  }
+  .home-text12 {
+    font-size: 1.2rem;
+    font-family: Inter;
   }
   .home-card2 {
     width: 100%;
     border-radius: 20px;
+  }
+  .home-header4 {
+    color: rgb(0, 0, 0);
+  }
+  .home-description2 {
+    color: rgb(0, 0, 0);
+    font-family: MonaSans-Regular;
+    line-height: 28px;
+  }
+  .home-text15 {
+    font-size: 1.2rem;
+    font-family: Inter;
   }
   .home-footer {
     padding-top: 0px;
@@ -460,8 +574,17 @@
     flex-direction: column;
     justify-content: flex-start;
   }
+  .home-container1 {
+    width: 100%;
+  }
+  .home-subscribe {
+    width: 100%;
+  }
   .home-main1 {
-    width: 937px;
+    width: 100%;
+  }
+  .home-heading2 {
+    color: rgb(0, 0, 0);
   }
   .home-input-field {
     align-self: center;
@@ -479,21 +602,49 @@
   }
   .home-heading {
     color: rgb(0, 0, 0);
-    font-size: 4rem;
+    font-size: 5rem;
     font-style: normal;
     text-align: center;
     font-family: Georgia;
     font-weight: 400;
   }
+  .home-text {
+    font-size: 3rem;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
+  }
+  .home-text01 {
+    font-size: 3rem;
+    font-family: Inter Tight;
+    font-weight: 600;
+  }
+  .home-text02 {
+    font-size: 3rem;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
+  }
   .home-caption {
     color: rgb(0, 0, 0);
-    font-size: 2rem;
+    font-size: 1rem;
     text-align: center;
     font-family: MonaSans-Regular;
-    line-height: 2.5rem;
+    line-height: 1.5rem;
+  }
+  .home-text04 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  .home-text05 {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
   .home-left {
     gap: var(--dl-space-space-unit);
+  }
+  .home-heading1 {
+    color: rgb(0, 0, 0);
   }
   .home-cards {
     height: auto;
@@ -501,11 +652,56 @@
   .home-card {
     height: auto;
   }
+  .home-header2 {
+    color: rgb(0, 0, 0);
+  }
+  .home-description {
+    color: rgb(0, 0, 0);
+    font-family: MonaSans-Regular;
+    line-height: 28px;
+  }
+  .home-text07 {
+    font-size: 1.2rem;
+    font-family: Inter;
+  }
   .home-card1 {
     height: auto;
   }
+  .home-header3 {
+    color: rgb(0, 0, 0);
+  }
+  .home-text09 {
+    font-size: 1.5rem;
+    font-family: Inter Tight;
+  }
+  .home-description1 {
+    color: rgb(0, 0, 0);
+    font-family: MonaSans-Regular;
+    line-height: 28px;
+  }
+  .home-text12 {
+    font-size: 1.2rem;
+    font-family: Inter;
+  }
   .home-card2 {
     height: auto;
+  }
+  .home-header4 {
+    color: rgb(0, 0, 0);
+    font-size: 1.5rem;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
+    line-height: 36px;
+  }
+  .home-description2 {
+    color: rgb(0, 0, 0);
+    font-family: MonaSans-Regular;
+    line-height: 28px;
+  }
+  .home-text15 {
+    font-size: 1.2rem;
+    font-family: Inter;
   }
   .home-footer {
     padding-top: 0px;
@@ -522,19 +718,19 @@
   .home-heading2 {
     color: rgb(0, 0, 0);
     width: 100%;
-    font-size: 20px;
+    font-size: 1rem;
     max-width: 100%;
     font-style: normal;
     text-align: center;
-    font-family: MonaSans-MediumBold;
+    font-family: Inter Tight;
     font-weight: 500;
     line-height: 30px;
   }
   .home-textinput {
     text-align: left;
   }
-  .home-text27 {
-    color: #ffffff;
+  .home-text18 {
+    color: rgb(255, 255, 255);
     font-size: 16px;
     font-style: normal;
     text-align: center;
@@ -542,8 +738,14 @@
     font-weight: 500;
     line-height: 24px;
   }
+  .home-text19 {
+    font-family: Inter;
+  }
 }
 @media(max-width: 479px) {
+  .home-container {
+    background-color: #fafafc;
+  }
   .home-header {
     width: 100%;
     align-items: flex-start;
@@ -551,39 +753,42 @@
   .home-heading {
     color: rgb(0, 0, 0);
     width: 100%;
-    font-size: 2rem;
+    font-size: 5rem;
     max-width: 100%;
     align-self: center;
     text-align: center;
-    font-family: Georgia;
-    font-weight: 400;
+    font-family: Inter Tight;
+    font-weight: 600;
+    line-height: 2rem;
   }
   .home-text {
-    font-size: 2.5rem;
+    font-size: 3rem;
     max-width: 280px;
+    line-height: 3rem;
   }
   .home-text01 {
-    font-size: 2.5rem;
-    max-width: 280px;
+    font-size: 3rem;
+    line-height: 3rem;
   }
   .home-text02 {
-    font-size: 2.5rem;
-  }
-  .home-text03 {
-    font-size: 2.5rem;
+    font-size: 3rem;
+    line-height: 3rem;
   }
   .home-caption {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     width: 100%;
-    font-size: 2rem;
+    font-size: 1rem;
     text-align: center;
     font-family: MonaSans-Regular;
-    line-height: 30px;
+    line-height: 1.5rem;
   }
-  .home-text06 {
-    color: #000000;
-    font-size: 1.5rem;
-    font-family: MonaSans-Regular;
+  .home-text04 {
+    line-height: 1.5rem;
+  }
+  .home-text05 {
+    font-size: 1rem;
+    font-family: Inter;
+    line-height: 1.5rem;
   }
   .home-header1 {
     max-width: 100%;
@@ -591,37 +796,44 @@
   .home-heading1 {
     color: rgb(0, 0, 0);
     font-size: 2rem;
-    font-family: MonaSans-MediumBold;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
     border-color: var(--dl-color-gray-black);
     border-width: 0px;
-  }
-  .home-text08 {
-    font-style: normal;
-    font-weight: 400;
-  }
-  .home-text10 {
-    font-style: normal;
-    font-weight: 400;
   }
   .home-cards {
     height: auto;
   }
   .home-card {
     width: 100%;
+    padding: var(--dl-space-space-threeunits);
   }
   .home-header2 {
     color: rgb(0, 0, 0);
-    font-size: 1.5rem;
+    font-size: 24px;
+    font-style: normal;
+    font-family: Inter Tight;
+    font-weight: 600;
+    line-height: 36px;
   }
   .home-description {
-    color: #000000;
+    color: rgb(0, 0, 0);
     height: auto;
     font-size: 1.2rem;
     font-family: MonaSans-Regular;
     line-height: 28px;
   }
+  .home-text07 {
+    font-size: 1.2rem;
+    font-family: Inter;
+  }
   .home-header3 {
+    color: rgb(0, 0, 0);
+  }
+  .home-text09 {
     font-size: 1.5rem;
+    font-family: Inter Tight;
   }
   .home-description1 {
     color: rgb(0, 0, 0);
@@ -630,20 +842,17 @@
     font-family: MonaSans-Regular;
     line-height: 28px;
   }
-  .home-text19 {
-    line-height: 28px;
-  }
   .home-header4 {
-    font-size: 1.5rem;
+    color: rgb(0, 0, 0);
   }
   .home-description2 {
-    color: #000000;
+    color: rgb(0, 0, 0);
     font-size: 1.2rem;
-  }
-  .home-text24 {
-    color: #c2c6cc;
-    font-family: Poppins;
+    font-family: MonaSans-Regular;
     line-height: 28px;
+  }
+  .home-text15 {
+    font-size: 1.2rem;
   }
   .home-footer {
     height: auto;
@@ -673,7 +882,7 @@
     align-self: center;
     font-style: normal;
     text-align: center;
-    font-family: MonaSans-MediumBold;
+    font-family: Inter Tight;
     font-weight: 500;
     line-height: 30px;
   }
@@ -697,30 +906,30 @@
     justify-content: center;
     background-color: #000000;
   }
-  .home-text26 {
+  .home-text17 {
     color: rgb(255, 255, 255);
     width: auto;
     display: flex;
     padding: var(--dl-space-space-halfunit);
     font-size: 1rem;
     align-self: stretch;
-    font-style: normal;
+    font-style: inherit;
     text-align: center;
-    font-family: MonaSans-Regular;
-    font-weight: 700;
+    font-family: Inter;
+    font-weight: 500;
     line-height: 1rem;
     white-space: nowrap;
     border-color: var(--dl-color-gray-black);
     border-width: 1px;
     flex-direction: row;
   }
-  .home-text27 {
-    color: rgb(12, 16, 12);
+  .home-text18 {
+    color: rgb(255, 255, 255);
     display: none;
-    font-size: 24px;
+    font-size: 16px;
     font-style: normal;
     font-family: Inter;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 24px;
   }
 }
